<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller">

  <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/dark_switch"
      android:layout_width="113dp"
      android:layout_height="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/DarkMode"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button_up"
      android:enabled="false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/up"
      app:layout_constraintBottom_toTopOf="@+id/button_down"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/button_left"
      android:enabled="false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="16dp"
      android:text="@string/left"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/button_down"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button_down"
      android:enabled="false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:text="@string/down"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button_right"
      android:enabled="false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="64dp"
      android:text="@string/right"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/button_down"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="244dp"
      android:layout_height="34dp"
      android:layout_marginTop="128dp"
      android:text="@string/DefaultText"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button_down" />

  <Spinner
      android:id="@+id/spinner"
      android:layout_width="208dp"
      android:layout_height="53dp"
      android:layout_row="0"
      app:layout_constraintBottom_toTopOf="@+id/button_up"
      app:layout_constraintEnd_toStartOf="@+id/button_connect"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.508" />

  <Button
      android:id="@+id/button_connect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/connect"
      android:onClick="ConnectButton"
      app:layout_constraintBottom_toTopOf="@+id/button_up"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>